[gd_scene load_steps=26 format=3 uid="uid://xy8es4l67t4a"]

[ext_resource type="Script" path="res://resources/scenes/nelix_game/components/characters/mc/player.gd" id="1_o08fp"]
[ext_resource type="Script" path="res://resources/scenes/nelix_game/components/ui/pausemenu/UI.gd" id="2_3lv64"]
[ext_resource type="AudioStream" uid="uid://dusfdcv6h3hrg" path="res://resources/audio/pause.wav" id="3_vavyq"]
[ext_resource type="Texture2D" uid="uid://dane6p1wnkwhi" path="res://resources/scenes/nelix_game/sprites/ui/headers/pause.png" id="4_6vaux"]
[ext_resource type="Texture2D" uid="uid://cktbt6pfj0cad" path="res://resources/scenes/nelix_game/sprites/ui/play/play_n.png" id="5_rleai"]
[ext_resource type="Texture2D" uid="uid://buybd2oa5wk8s" path="res://resources/scenes/nelix_game/sprites/ui/play/play-p.png" id="6_aaidp"]
[ext_resource type="Texture2D" uid="uid://b1n1tht150gw" path="res://resources/scenes/nelix_game/sprites/ui/play/play-h.png" id="7_gp24e"]
[ext_resource type="Texture2D" uid="uid://vlwc2nt0ro0a" path="res://resources/scenes/nelix_game/sprites/ui/options/options_n.png" id="8_gfx84"]
[ext_resource type="Texture2D" uid="uid://dweyrm5ypbdwe" path="res://resources/scenes/nelix_game/sprites/ui/options/options-p.png" id="9_3igm4"]
[ext_resource type="Texture2D" uid="uid://cqghawdqj1pad" path="res://resources/scenes/nelix_game/sprites/ui/options/options-h.png" id="10_u5lu5"]
[ext_resource type="Texture2D" uid="uid://pq6m13dxfvpb" path="res://resources/scenes/nelix_game/sprites/ui/quit/quit_n.png" id="11_71bnd"]
[ext_resource type="Texture2D" uid="uid://55ld3nonqtij" path="res://resources/scenes/nelix_game/sprites/ui/quit/quit-p.png" id="12_l1frk"]
[ext_resource type="Texture2D" uid="uid://divmsii5acjr8" path="res://resources/scenes/nelix_game/sprites/ui/quit/quit-h.png" id="13_ci5o0"]
[ext_resource type="Texture2D" uid="uid://bph5nnssbwqjl" path="res://resources/scenes/nelix_game/sprites/ui/headers/configs.png" id="14_4tddh"]
[ext_resource type="Shader" path="res://resources/shaders/crt_postprocess.gdshader" id="14_jwu3j"]
[ext_resource type="Texture2D" uid="uid://dis1j3rgmktgy" path="res://resources/scenes/nelix_game/sprites/ui/back/back_n.png" id="15_37o2e"]
[ext_resource type="Texture2D" uid="uid://bxulre1cni4oh" path="res://resources/scenes/nelix_game/sprites/ui/back/back_p.png" id="16_n2581"]
[ext_resource type="Texture2D" uid="uid://cx8pumpb0vfdd" path="res://resources/scenes/nelix_game/sprites/ui/back/back_h.png" id="17_1mv8v"]
[ext_resource type="FontFile" uid="uid://cpmmo07pbocsh" path="res://resources/fonts/Vermin Vibes 1989.ttf" id="20_oto8x"]
[ext_resource type="Texture2D" uid="uid://c1ue0xfek7rth" path="res://resources/scenes/nelix_game/sprites/ui/crosshair.png" id="21_a2yxy"]
[ext_resource type="Texture2D" path="res://resources/scenes/nelix_game/sprites/ui/UItileset.png" id="21_iiunq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cw808"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ydwsh"]
height = 1.2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wut86"]
texture = ExtResource("21_iiunq")
texture_margin_left = 20.3692
texture_margin_top = 46.5057
texture_margin_right = 43.7657
texture_margin_bottom = 38.8286
region_rect = Rect2(48, 48, 49.863, 49.73)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7kg1y"]
shader = ExtResource("14_jwu3j")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 2.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.0
shader_parameter/noise_opacity = 0.241
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = -0.02
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.229
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="CharacterBody3D" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_o08fp")

[node name="standingcollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_cw808")

[node name="crouchcollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("CapsuleShape3D_ydwsh")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 2, 0)

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="eyes" type="Camera3D" parent="head"]

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("2_3lv64")

[node name="sfx" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource("3_vavyq")

[node name="Cursor" type="Sprite2D" parent="UI"]
texture_filter = 1
position = Vector2(576, 329)
scale = Vector2(2, 2)
texture = ExtResource("21_a2yxy")

[node name="Debug" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 48.0
offset_top = 32.0
offset_right = 288.0
offset_bottom = 232.0

[node name="window2" type="Panel" parent="UI/Debug"]
texture_filter = 1
layout_mode = 0
offset_right = 120.0
offset_bottom = 100.0
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxTexture_wut86")

[node name="velocity_label_x" type="Label" parent="UI/Debug"]
layout_mode = 0
offset_left = 16.0
offset_top = 80.0
offset_right = 240.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("20_oto8x")
theme_override_font_sizes/font_size = 25
text = "velocitylabel"
autowrap_mode = 2
uppercase = true

[node name="velocity_label_y" type="Label" parent="UI/Debug"]
layout_mode = 0
offset_left = 16.0
offset_top = 103.0
offset_right = 480.0
offset_bottom = 126.0
theme_override_fonts/font = ExtResource("20_oto8x")
theme_override_font_sizes/font_size = 25
text = "velocitylabel"
autowrap_mode = 2
uppercase = true

[node name="velocity_label_z" type="Label" parent="UI/Debug"]
layout_mode = 0
offset_left = 16.0
offset_top = 126.0
offset_right = 240.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("20_oto8x")
theme_override_font_sizes/font_size = 25
text = "velocitylabel"
autowrap_mode = 2
uppercase = true

[node name="fps_label" type="Label" parent="UI/Debug"]
layout_mode = 1
offset_left = 16.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("20_oto8x")
theme_override_font_sizes/font_size = 25
text = "fpslabel"

[node name="PauseMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 48.0
offset_top = 32.0
offset_right = 88.0
offset_bottom = 72.0

[node name="Main" type="Control" parent="UI/PauseMenu"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -48.0
offset_top = -32.0
offset_right = 1104.0
offset_bottom = 616.0

[node name="MainContainer" type="VBoxContainer" parent="UI/PauseMenu/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -57.0
offset_right = 42.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(42.5, 57)
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Logo" type="TextureRect" parent="UI/PauseMenu/Main/MainContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("4_6vaux")

[node name="play" type="TextureButton" parent="UI/PauseMenu/Main/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_rleai")
texture_pressed = ExtResource("6_aaidp")
texture_hover = ExtResource("7_gp24e")

[node name="options" type="TextureButton" parent="UI/PauseMenu/Main/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("8_gfx84")
texture_pressed = ExtResource("9_3igm4")
texture_hover = ExtResource("10_u5lu5")

[node name="quit" type="TextureButton" parent="UI/PauseMenu/Main/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("11_71bnd")
texture_pressed = ExtResource("12_l1frk")
texture_hover = ExtResource("13_ci5o0")

[node name="Options" type="Control" parent="UI/PauseMenu"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -48.0
offset_top = -32.0
offset_right = 1104.0
offset_bottom = 616.0

[node name="OptionsContainer" type="VBoxContainer" parent="UI/PauseMenu/Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -44.0
offset_right = 42.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(42.5, 44)
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Logo" type="TextureRect" parent="UI/PauseMenu/Options/OptionsContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("14_4tddh")

[node name="freecam" type="TextureButton" parent="UI/PauseMenu/Options/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("8_gfx84")
texture_pressed = ExtResource("9_3igm4")
texture_hover = ExtResource("10_u5lu5")

[node name="back" type="TextureButton" parent="UI/PauseMenu/Options/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("15_37o2e")
texture_pressed = ExtResource("16_n2581")
texture_hover = ExtResource("17_1mv8v")

[node name="effects" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_7kg1y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="UI/PauseMenu/Main/MainContainer/play" to="UI" method="_on_play_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Main/MainContainer/options" to="UI" method="_on_options_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Main/MainContainer/quit" to="UI" method="_on_quit_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Options/OptionsContainer/freecam" to="." method="_on_freecam_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Options/OptionsContainer/back" to="UI" method="_on_back_pressed"]
